Kelsey Development Sandbox/src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>AGE__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BENRCDS1__c</fullName>
        <label>BENRCDS1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BENRCDS__c</fullName>
        <label>BENRCDS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPREVCA__c</fullName>
        <label>BPREVCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPREVEPI__c</fullName>
        <label>BPREVEPI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CENTER__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CURRENT_AGE__c</fullName>
        <description>Current age =( today&apos;s date - date of birth)/365 days</description>
        <formula>FLOOR((TODAY() - DOB1__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CURRENT_AGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinician_Email__c</fullName>
        <label>Clinician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Clinician_Name__c</fullName>
        <formula>Clinician__r.Name__c</formula>
        <label>Clinician Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinician ID</label>
        <referenceTo>Clinician__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Treatment__c</fullName>
        <label>Closed Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB1__c</fullName>
        <label>Date of birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB2__c</fullName>
        <label>DOB2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Followup__r.FDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Treatment_Status__c</fullName>
        <description>If the FUTYPE is 2, the case is closed. If there is no FUTYPE or if it equals another value, the case is open.</description>
        <formula>IF( ISPICKVAL( Followup__r.FUTYPE__c , &quot;2&quot;), &quot;Closed&quot; , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Followup Treatment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS Background Family Info F</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GENDER__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know/ Information not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INIT__c</fullName>
        <label>INITIALS</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITEID__c</fullName>
        <label>SITEID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Treatment_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Treatment Closed</label>
        <type>Checkbox</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>ClosedClients</fullName>
        <columns>NAME</columns>
        <columns>Closed_Treatment__c</columns>
        <columns>CENTER__c</columns>
        <columns>Clinician__c</columns>
        <columns>CURRENT_AGE__c</columns>
        <columns>GENDER__c</columns>
        <columns>INIT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Treatment__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>ClosedClients</label>
    </listViews>
    <listViews>
        <fullName>My_Clients</fullName>
        <columns>Clinician__c</columns>
        <columns>NAME</columns>
        <columns>INIT__c</columns>
        <columns>GENDER__c</columns>
        <columns>DOB1__c</columns>
        <columns>AGE__c</columns>
        <columns>CURRENT_AGE__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>My Clients</label>
    </listViews>
    <listViews>
        <fullName>OpenClients</fullName>
        <columns>NAME</columns>
        <columns>Closed_Treatment__c</columns>
        <columns>CENTER__c</columns>
        <columns>Clinician__c</columns>
        <columns>CURRENT_AGE__c</columns>
        <columns>GENDER__c</columns>
        <columns>INIT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Treatment__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>OpenClients</label>
    </listViews>
    <listViews>
        <fullName>all_the_clients</fullName>
        <columns>NAME</columns>
        <columns>CENTER__c</columns>
        <columns>Clinician__c</columns>
        <columns>Clinician_Name__c</columns>
        <columns>Clinician_Email__c</columns>
        <columns>Closed_Treatment__c</columns>
        <columns>CURRENT_AGE__c</columns>
        <columns>GENDER__c</columns>
        <columns>INIT__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>all the clients</label>
    </listViews>
    <nameField>
        <label>Client ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age_smaller_than_22</fullName>
        <active>true</active>
        <errorConditionFormula>AGE__c &gt; 21</errorConditionFormula>
        <errorDisplayField>AGE__c</errorDisplayField>
        <errorMessage>Client cannot be older than 21</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Age_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; AGE__c !=  FLOOR((TODAY() - DOB1__c)/365.2425)</errorConditionFormula>
        <errorDisplayField>AGE__c</errorDisplayField>
        <errorMessage>Age is wrong</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_birth_cannot_be_future_1</fullName>
        <active>true</active>
        <errorConditionFormula>DOB1__c  &gt;TODAY()</errorConditionFormula>
        <errorDisplayField>DOB1__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_birth_cannot_be_future_2</fullName>
        <active>true</active>
        <errorConditionFormula>DOB2__c  &gt;TODAY()</errorConditionFormula>
        <errorDisplayField>DOB2__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Double_entry_for_dob</fullName>
        <active>true</active>
        <description>Check double entry for Date of Birth</description>
        <errorConditionFormula>DOB1__c !=  DOB2__c</errorConditionFormula>
        <errorMessage>The two date of birth are different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Owner_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( CONTAINS( Owner:User.UserRole.Name , LEFT(CENTER__r.Name,4) ) )
&amp;&amp;  (NOT(CONTAINS($Profile.Name, &apos;Power User&apos;))  )</errorConditionFormula>
        <errorMessage>The Clinician you have entered is not available to receive this Client. Please select a Clinician from within your Center.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_number_for_Initial</fullName>
        <active>true</active>
        <errorConditionFormula>ISNUMBER( INIT__c )</errorConditionFormula>
        <errorDisplayField>INIT__c</errorDisplayField>
        <errorMessage>No number for initial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STOP_and_Go_to_Followup</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(BENRCDS1__c , &quot;Yes&quot;)</errorConditionFormula>
        <errorDisplayField>BENRCDS1__c</errorDisplayField>
        <errorMessage>Do not proceed with Enrollment. Go to the Follow-up Assessment and create a Follow up Visit record.</errorMessage>
    </validationRules>
</CustomObject>